# mongebot-go

./: .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/cli/: main.go
cmd/mongebot/: main.go
data/: proxies.txt.example  tokens.txt.example  user-agents.txt.example
deploy/alertmanager/: alertmanager.yml
deploy/grafana/: dashboard.json
deploy/prometheus/: alert_rules.yml  prometheus.yml
docker/: Dockerfile.backend
docs/: SESSION-RESUME.md  architecture.md  plan.md  todo.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
internal/account/: account_test.go  manager.go  profile.go  sqlite_repo.go
internal/api/: handler.go  handler_extended.go  handler_scheduler.go  handler_system.go  handler_webhook.go  metrics_prometheus.go  middleware.go  server.go
internal/config/: archive.go  config.go  config_test.go  defaults.go  env.go  migrate.go
internal/engine/: behavior.go  engine.go  engine_test.go  eventbus.go  eventbus_test.go  fsm.go  fsm_test.go  multi.go  notifier.go  persistence.go  ratelimit.go  ratelimit_test.go  reconnect.go  reconnect_test.go  scheduler.go  shutdown.go  webhook.go  worker.go
internal/logger/: logger.go  ring.go  ring_test.go
internal/platform/: platform.go  platform_test.go  (+1 more)
(+74 files in other folders)
